Added reload
