# api/swagger/swagger.yaml
@@ -58,10 +58,10 @@ paths:
         default:
           $ref: '#/responses/Error'
 
-  /devices:
+  /reload:
     x-swagger-router-controller: system
     get:
-      operationId: getDevices
+      operationId: Reload
       security:
       - Oauth:
         - user
@@ -73,10 +73,10 @@ paths:
         default:
           $ref: '#/responses/Error'
 
-  /status:
+  /devices:
     x-swagger-router-controller: system
     get:
-      operationId: getStatus
+      operationId: getDevices
       security:
       - Oauth:
         - user
